rename page.css 10

--- a/contact-host.html
+++ b/contact-host.html
@@ -713,8 +713,8 @@
                                           </svg></div
                                       ></a>
                                     </div>
-                                    <div class="_emkzyn">
-                                      <div class="_4acemm4">
+                                    <div class="products-container__header-search">
+                                      <div class="products-container__header-search-wrapper">
                                         <div
                                           class="header__search-btn-wrapper header__search-btn-wrapper-text-mw dir dir-ltr"
                                           role="search"
@@ -762,9 +762,9 @@
                                           </button>
                                         </div>
                                       </div>
-                                      <div class="_1up2wiaw hidden">
+                                      <div class="products-container__header-search-input-wrapper hidden">
                                         <div
-                                          class="_1lveqk8"
+                                          class="products-container__header-form"
                                           data-nosnippet="true"
                                         >
                                           <form
@@ -773,7 +773,7 @@
                                             method="get"
                                             role="search"
                                           >
-                                            <div class="_1h6yktt">
+                                            <div class="products-container__header-form-spacer-mt">
                                               <div
                                                 role="tablist"
                                                 aria-label="What can we help you find?"
