--- a/merchandising.html
+++ b/merchandising.html
@@ -4268,7 +4268,7 @@
                                               data-plugin-in-point-id="EXPLORE_EXPANDABLE_SEARCH"
                                               data-section-id="EXPLORE_EXPANDABLE_SEARCH"
                                             >
-                                              <div class="_4acemm4">
+                                              <div class="products-container__header-search-wrapper">
                                                 <div
                                                   class="header__search-btn-wrapper header__search-btn-wrapper-text-mw dir dir-ltr"
                                                   role="search"
@@ -4359,7 +4359,7 @@
                                                   </button>
                                                 </div>
                                               </div>
-                                              <div class="_1up2wiaw hidden">
+                                              <div class="products-container__header-search-input-wrapper hidden">
                                                 <div data-nosnippet="true">
                                                   <div
                                                     class="header__search-tabs-wrapper dir dir-ltr"
@@ -4373,7 +4373,7 @@
                                                         method="get"
                                                         role="search"
                                                       >
-                                                        <div class="_1h6yktt">
+                                                        <div class="products-container__header-form-spacer-mt">
                                                           <div
                                                             role="tablist"
                                                             aria-label="What can we help you find?"
@@ -4516,7 +4516,7 @@
                                                                           tabindex="-1"
                                                                         >
                                                                           <div
-                                                                            class="header__search-tabs-filter-body-where-recent kn3kizz dir dir-ltr"
+                                                                            class="header__search-tabs-filter-body-where-recent header__search-tabs-filter-body-where-recent-w dir dir-ltr"
                                                                           >
                                                                             <div
                                                                               role="group"
