--- a/preferences.html
+++ b/preferences.html
@@ -287,7 +287,7 @@
                                       </div>
                                       <div class="va-top-nowrap">
                                         <div class="hero-banner__label">
-                                          <div class="_1asnseo">
+                                          <div class="login-security__btn-wrapper">
                                             <button
                                               type="button"
                                               class="app-theme__navbar-create-button"
@@ -311,7 +311,7 @@
                                       </div>
                                       <div class="va-top-nowrap">
                                         <div class="hero-banner__label">
-                                          <div class="_1asnseo">
+                                          <div class="login-security__btn-wrapper">
                                             <button
                                               type="button"
                                               class="app-theme__navbar-create-button"
@@ -769,7 +769,7 @@
                                       </div>
                                       <div class="va-top-nowrap">
                                         <div class="hero-banner__label">
-                                          <div class="_1asnseo">
+                                          <div class="login-security__btn-wrapper">
                                             <button
                                               type="button"
                                               class="app-theme__navbar-create-button"
@@ -793,7 +793,7 @@
                                       </div>
                                       <div class="va-top-nowrap">
                                         <div class="hero-banner__label">
-                                          <div class="_1asnseo">
+                                          <div class="login-security__btn-wrapper">
                                             <button
                                               type="button"
                                               class="app-theme__navbar-create-button"
@@ -1006,7 +1006,7 @@
                                       </div>
                                       <div class="va-top-nowrap">
                                         <div class="hero-banner__label">
-                                          <div class="_1asnseo">
+                                          <div class="login-security__btn-wrapper">
                                             <button
                                               type="button"
                                               class="app-theme__navbar-create-button"
@@ -1028,7 +1028,7 @@
                                       </div>
                                       <div class="va-top-nowrap">
                                         <div class="hero-banner__label">
-                                          <div class="_1asnseo">
+                                          <div class="login-security__btn-wrapper">
                                             <button
                                               type="button"
                                               class="app-theme__navbar-create-button"
@@ -1996,7 +1996,7 @@
                                           </div>
                                           <div class="va-top-nowrap">
                                             <div class="hero-banner__label">
-                                              <div class="_1asnseo">
+                                              <div class="login-security__btn-wrapper">
                                                 <button
                                                   type="button"
                                                   class="app-theme__navbar-create-button"
@@ -2020,7 +2020,7 @@
                                           </div>
                                           <div class="va-top-nowrap">
                                             <div class="hero-banner__label">
-                                              <div class="_1asnseo">
+                                              <div class="login-security__btn-wrapper">
                                                 <button
                                                   type="button"
                                                   class="app-theme__navbar-create-button"
@@ -2311,7 +2311,7 @@
                                           </div>
                                           <div class="va-top-nowrap">
                                             <div class="hero-banner__label">
-                                              <div class="_1asnseo">
+                                              <div class="login-security__btn-wrapper">
                                                 <button
                                                   type="button"
                                                   class="app-theme__navbar-create-button"
@@ -2335,7 +2335,7 @@
                                           </div>
                                           <div class="va-top-nowrap">
                                             <div class="hero-banner__label">
-                                              <div class="_1asnseo">
+                                              <div class="login-security__btn-wrapper">
                                                 <button
                                                   type="button"
                                                   class="app-theme__navbar-create-button"
@@ -2553,7 +2553,7 @@
                                           </div>
                                           <div class="va-top-nowrap">
                                             <div class="hero-banner__label">
-                                              <div class="_1asnseo">
+                                              <div class="login-security__btn-wrapper">
                                                 <button
                                                   type="button"
                                                   class="app-theme__navbar-create-button"
@@ -2577,7 +2577,7 @@
                                           </div>
                                           <div class="va-top-nowrap">
                                             <div class="hero-banner__label">
-                                              <div class="_1asnseo">
+                                              <div class="login-security__btn-wrapper">
                                                 <button
                                                   type="button"
                                                   class="app-theme__navbar-create-button"
