--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -269,7 +269,7 @@
                                 </div>
                               </div>
                               <div class="relative">
-                                <div class="_1u988s40">
+                                <div class="privacy-sharing__mobile-body">
                                   <div style="margin: 0px">
                                     <div style="margin-bottom: 48px">
                                       <section>
@@ -341,7 +341,7 @@
                                                           class="explore-filter-menu__list-title"
                                                         >
                                                           <h2
-                                                            class="h1ele5sn dir dir-ltr"
+                                                            class="privacy-sharing__manage-header-h2 dir dir-ltr"
                                                           >
                                                             Manage your account
                                                             data
@@ -356,7 +356,7 @@
                                                       </div>
                                                     </div>
                                                     <div
-                                                      class="rr8jr1v dir dir-ltr"
+                                                      class="privacy-sharing__manage-acc-list dir dir-ltr"
                                                     >
                                                       <div
                                                         id="ap-row"
@@ -372,7 +372,7 @@
                                                               class="account-container-mb__menu-btn"
                                                             >
                                                               <span
-                                                                class="_l07b5z"
+                                                                class="privacy-sharing__manage-acc-title"
                                                                 ><div
                                                                   id="ap-row-row-title"
                                                                   class="explore-filter-menu__list-title"
@@ -418,7 +418,7 @@
                                                       </div>
                                                     </div>
                                                     <div
-                                                      class="rr8jr1v dir dir-ltr"
+                                                      class="privacy-sharing__manage-acc-list dir dir-ltr"
                                                     >
                                                       <div
                                                         id="erasure-row"
@@ -433,7 +433,7 @@
                                                               href="/privacy/manage-your-data/deletion"
                                                               class="_1mt76m69"
                                                               ><span
-                                                                class="_l07b5z"
+                                                                class="privacy-sharing__manage-acc-title"
                                                                 ><div
                                                                   id="erasure-row-row-title"
                                                                   class="explore-filter-menu__list-title"
@@ -501,7 +501,7 @@
                                                           class="explore-filter-menu__list-title"
                                                         >
                                                           <h2
-                                                            class="h1fiu44t dir dir-ltr"
+                                                            class="privacy-sharing__sharing-title dir dir-ltr"
                                                           >
                                                             Activity sharing
                                                           </h2>
@@ -562,7 +562,7 @@
                                                       </div>
                                                     </div>
                                                     <div
-                                                      class="d1q7vkj0 dir dir-ltr"
+                                                      class="privacy-sharing__sharing-divider dir dir-ltr"
                                                     ></div>
                                                     <div
                                                       id="data-row"
@@ -577,7 +577,7 @@
                                                           class="explore-filter-menu__list-title"
                                                         >
                                                           <h2
-                                                            class="h1fiu44t dir dir-ltr"
+                                                            class="privacy-sharing__sharing-title dir dir-ltr"
                                                           >
                                                             Data sharing
                                                           </h2>
@@ -667,7 +667,7 @@
                                                       </div>
                                                     </div>
                                                     <div
-                                                      class="d1q7vkj0 dir dir-ltr"
+                                                      class="privacy-sharing__sharing-divider dir dir-ltr"
                                                     ></div>
                                                   </section>
                                                 </div>
@@ -691,7 +691,7 @@
                                                           class="explore-filter-menu__list-title"
                                                         >
                                                           <h2
-                                                            class="h1csa99k dir dir-ltr"
+                                                            class="privacy-sharing__services-divider dir dir-ltr"
                                                           >
                                                             Connected services
                                                           </h2>
@@ -1024,7 +1024,7 @@
                                                   class="explore-filter-menu__list-title"
                                                 >
                                                   <h2
-                                                    class="h1ele5sn dir dir-ltr"
+                                                    class="privacy-sharing__manage-header-h2 dir dir-ltr"
                                                   >
                                                     Manage your account data
                                                   </h2>
@@ -1036,7 +1036,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="rr8jr1v dir dir-ltr">
+                                            <div class="privacy-sharing__manage-acc-list dir dir-ltr">
                                               <div
                                                 id="ap-row"
                                                 aria-disabled="false"
@@ -1050,7 +1050,7 @@
                                                       type="button"
                                                       class="account-container-mb__menu-btn"
                                                     >
-                                                      <span class="_l07b5z"
+                                                      <span class="privacy-sharing__manage-acc-title"
                                                         ><div
                                                           id="ap-row-row-title"
                                                           class="explore-filter-menu__list-title"
@@ -1091,7 +1091,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="rr8jr1v dir dir-ltr">
+                                            <div class="privacy-sharing__manage-acc-list dir dir-ltr">
                                               <div
                                                 id="erasure-row"
                                                 aria-disabled="false"
@@ -1104,7 +1104,7 @@
                                                     <a
                                                       href="/privacy/manage-your-data/deletion"
                                                       class="_1mt76m69"
-                                                      ><span class="_l07b5z"
+                                                      ><span class="privacy-sharing__manage-acc-title"
                                                         ><div
                                                           id="erasure-row-row-title"
                                                           class="explore-filter-menu__list-title"
@@ -1166,7 +1166,7 @@
                                                   class="explore-filter-menu__list-title"
                                                 >
                                                   <h2
-                                                    class="h1fiu44t dir dir-ltr"
+                                                    class="privacy-sharing__sharing-title dir dir-ltr"
                                                   >
                                                     Activity sharing
                                                   </h2>
@@ -1222,7 +1222,7 @@
                                               </div>
                                             </div>
                                             <div
-                                              class="d1q7vkj0 dir dir-ltr"
+                                              class="privacy-sharing__sharing-divider dir dir-ltr"
                                             ></div>
                                             <div
                                               id="data-row"
@@ -1237,7 +1237,7 @@
                                                   class="explore-filter-menu__list-title"
                                                 >
                                                   <h2
-                                                    class="h1fiu44t dir dir-ltr"
+                                                    class="privacy-sharing__sharing-title dir dir-ltr"
                                                   >
                                                     Data sharing
                                                   </h2>
@@ -1322,7 +1322,7 @@
                                               </div>
                                             </div>
                                             <div
-                                              class="d1q7vkj0 dir dir-ltr"
+                                              class="privacy-sharing__sharing-divider dir dir-ltr"
                                             ></div>
                                           </section>
                                         </div>
@@ -1346,7 +1346,7 @@
                                                   class="explore-filter-menu__list-title"
                                                 >
                                                   <h2
-                                                    class="h1csa99k dir dir-ltr"
+                                                    class="privacy-sharing__services-divider dir dir-ltr"
                                                   >
                                                     Connected services
                                                   </h2>
@@ -1366,10 +1366,10 @@
                                   </div>
                                   <div class="notification__question-wrapper">
                                     <div
-                                      class="c108hjch dir dir-ltr"
+                                      class="notification__question-content-wrapper dir dir-ltr"
                                       id="FMP-target"
                                     >
-                                      <span class="t1dxfhef dir dir-ltr"
+                                      <span class="notification__question-content-title dir dir-ltr"
                                         >Committed to privacy</span
                                       ><span
                                         >Airbnb is committed to keeping your
