--- a/login-security.html
+++ b/login-security.html
@@ -302,7 +302,7 @@
                                               </div>
                                               <div class="va-top-nowrap">
                                                 <div class="hero-banner__label">
-                                                  <div class="_1asnseo">
+                                                  <div class="login-security__btn-wrapper">
                                                     <button
                                                       type="button"
                                                       class="app-theme__navbar-create-button"
@@ -326,7 +326,7 @@
                                               </div>
                                               <div class="va-top-nowrap">
                                                 <div class="hero-banner__label">
-                                                  <div class="_1asnseo">
+                                                  <div class="login-security__btn-wrapper">
                                                     <button
                                                       type="button"
                                                       class="app-theme__navbar-create-button"
@@ -1435,7 +1435,7 @@
                                                 </div>
                                                 <div class="va-top-nowrap">
                                                   <div class="hero-banner__label">
-                                                    <div class="_1asnseo">
+                                                    <div class="login-security__btn-wrapper">
                                                       <button
                                                         type="button"
                                                         class="app-theme__navbar-create-button"
@@ -1459,7 +1459,7 @@
                                                 </div>
                                                 <div class="va-top-nowrap">
                                                   <div class="hero-banner__label">
-                                                    <div class="_1asnseo">
+                                                    <div class="login-security__btn-wrapper">
                                                       <button
                                                         type="button"
                                                         class="app-theme__navbar-create-button"
